<resources>
    <string name="app_name">ayubo.life</string>
    <string name="animatetext_welcome">Welcome to ayubo.life, your health and wellness companion</string>
    <string name="animatetext_entername">What is your name?</string>
    <string name="animatetext_thankyou">Thank you</string>
    <string name="animatetext_hi">Hi</string>
    <string name="animatetext_entermobile">, simply enter your mobile number to register with ayubo.life</string>
    <string name="animatetext_summery">, we will verify your mobile number by sending an sms. Please wait..</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel_ayubo_life</string>
    <string name="error_msg_unknown">error msg unknown</string>
    <string name="error_msg_noinnsight">Looks like you do not have enough goals to make a summary of your progress.</string>
    <string name="error_msg_noinnsight2">Add more goals to get a summary.</string>
    <string name="did_you_achive_this_goal_small">Was this</string>
    <string name="did_you_achive_this_goal_large">Goal achieved ?</string>
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
    <string name="hint_enter_your_name">Enter your name</string>
    <string name="hint_enter_your_mobile">Enter mobile number</string>
    <string name="btn_text_next">Next</string>
    <string name="toast_gender_empty">Please select gender</string>
    <string name="toast_birthday_empty">Birthday can not be empty</string>
    <string name="toast_birthday_invalid">Please select valid birthday</string>
    <string name="toast_email_empty">Email can not be empty</string>
    <string name="terms_conditions"><![CDATA[I agreed to Terms & Conditions]]></string>
    <string name="toast_firstname_empty">First name can not be empty</string>
    <string name="toast_firstname_onlycharacters">Name can only contains characters</string>
    <string name="toast_lastname_empty">Last name can not be empty</string>
    <string name="toast_lastname_onlycharacters">Last name can only contains characters</string>
    <string name="toast_no_internet">Unable to detect an active internet connection</string>
    <string name="toast_enter_valid_phonenumber">Please enter valid mobile number</string>
    <string name="toast_enter_name">Please enter name</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="facebook_app_id">261683904975753</string>
    <string name="topmenu_home">Home</string>
    <string name="topmenu_gallery">Blog</string>
    <string name="topmenu_challenge">CHALLENGES</string>
    <string name="topmenu_history">History</string>
    <string name="sidemenu_home">Home</string>
    <string name="sidemenu_promocode">Community Key</string>
    <string name="sidemenu_badges">Badges</string>
    <string name="sidemenu_share">Invite Friends</string>
    <string name="sidemenu_coporate">Join a Community</string>
    <string name="sidemenu_connect">Connect Devices</string>
    <string name="sidemenu_qrcode">Scan QR Code</string>
    <string name="sidemenu_insurance">Insurance</string>
    <string name="sidemenu_help">Help and Feedback</string>
    <string name="sidemenu_hos_info">Hospital Information</string>
    <string name="sidemenu_about">About</string>
    <string name="sidemenu_history">History</string>
    <string name="sidemenu_payment_history">Payments</string>
    <string name="sidemenu_profile">Profile</string>
    <string name="sidemenu_lifepoints">.life Points</string>
    <string name="sidemenu_payments">Payments</string>
    <string name="sidemenu_subscriptions">Subscriptions</string>
    <string name="txt_register">Live Happy :)</string>
    <string name="hint_entermobilenumber">Enter mobile number</string>
    <string name="topic_body">BODY</string>
    <string name="body_text_details">Each one of us is blessed with a unique body and we have the opportunity to get the best out of it. Live Happy :)</string>
    <string name="body_text_details_sub">Some of the apps and wearables you can connect</string>
    <string name="body_text_details_mind">Work. Kids. Studies. Costs. Errands. People. Society. Politicians. All this topple the balance in our mind and create stress. Let’s work together to regain control, stay at peace, stay focused. Live happy :) </string>
    <string name="topic_mind">MIND</string>
    <string name="body_text_details_food">It’s a necessity and an indulgence! Let’s learn to balance it while enjoying the best nature has to offer. Live Happy :)</string>
    <string name="topic_food">FOOD</string>
    <string name="topic_health">HEALTH</string>
    <string name="body_text_details_health">Sometimes things go wrong. Prevention is the best, early attention is the next best. We are here to ensure your healthcare needs are at your fingertips. Live Happy :)</string>
    <string name="terms_para1">Ayubo.life is committed to respecting the privacy rights of users of the Ayubo.life mobile application. This Privacy Policy is to explain its information collection and use practices and the protection of your information when you visit and use the Ayubo.life Website and mobile Application.</string>
    <string name="terms_para2">This Privacy Policy is only applicable to the Ayubo.life Website and Applications and does not apply to any websites or applications that are owned or operated by third parties ("Third-Party Websites/Applications"), which may have data collection, storage and use practices and policies that differ materially from this Privacy Policy. </string>
    <string name="terms_para3">Ayubo.life collects information from users upon registration on its website and in connection with the use of any of Ayubo.life applications.
By registering, the user explicitly agrees that Ayubo.life shall have the right to use all automatically collected personally identifiable information.
Ayubo.life does not pass on personally identifiable information to third parties, except as required by law or with the explicit consent of the user.
Ayubo.life implements all reasonable measures to prevent the unauthorized access by third parties to saved details.
The user explicitly consents to the storage and use of non-personally identifiable information for purposes of in-app advertising
Health data will never be shared with advertisers or with any similar agencies.</string>
    <string name="terms_para4">Ayubo.life allows the users to login through the facebook credentials, in such instances Ayubo.life fetch the users public profile with the consent of the user from Facebook and store them in the Ayubo.life platform for identification purposes
If users do not want to have the respective social media-platform connected with the Ayubo.life mobile application, users must log out from their social media-account.</string>
    <string name="terms_para5">If Ayubo.life decides to change its privacy policy, it will post those changes on this page. This policy was last modified on 01 Jan, 2017.</string>
    <string name="terms_para6">BY USING THE WEBSITE AND/OR APPLICATIONS, YOU REPRESENT AND WARRANT THAT YOU HAVE READ AND UNDERSTOOD, AND AGREE TO THE TERMS OF, THIS PRIVACY POLICY. IF YOU DO NOT UNDERSTAND OR DO NOT AGREE TO BE BOUND BY THIS PRIVACY POLICY, YOU MAY NOT USE THE WEBSITE AND/OR APPLICATION.</string>
    <string-array name="title_array">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Miss</item>
        <item>Mast</item>
        <item>Dr</item>
        <item>Baby</item>
    </string-array>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Settings</item>

    </string-array>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="empty_content_description">Text…</string>
    <string name="program_setting_alert_active">Restarting your program will allow you to follow your program from the beginning.</string>
    <string name="program_setting_alert_resume">Your program will be resumed.</string>
    <string name="program_setting_alert_pause">Your program will be paused. Be sure to resume it at whatever time.</string>
    <string name="program_setting_alert_inactive">Deactivate will completely disable the program from further viewing. Reactivation of the program may require you to resubscribe</string>
    <string name="no_internet_connection">No active internet connection</string>
    <string name="servcer_not_available">Server is temporarily unavailable</string>
    <string name="service_not_available">Service is temporarily unavailable</string>
    <string name="field_name_user_name">User name</string>
    <string name="field_name_chat_room_name">Chat room name</string>
    <string name="error_name_must_not_contain_special_characters_from_app">%1$s must contain 3 &#8212; %2$s alphanumeric Latin characters without space, the first char must be a letter</string>
    <string name="text_push_notification_message">"%s is calling you"</string>
    <string name="no_report_here">It looks like there are no reports here</string>
    <string name="no_messages_here">No messages available</string>
    <string name="sender_id">761750217637</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">todo</string>
    <string name="help_andfeed_new">Please call our support line on 0117988788 for further assistance</string>
    <string name="help_lifeplus">Please e-mail us at support@lifeplus.com.bd.</string>
    <string name="goal_reached_notification">Goal reached! %s steps and counting</string>
    <string name="notification_text">%s steps</string>
    <string name="your_progress_will_be_shown_here_soon">Your progress will be shown here soon</string>
    <string name="ispaused">Ayubo StepCounter is paused</string>
    <string name="notification_title">Counting</string>
    <string name="no_connection">No Internet Connection Available!</string>
    <string name="cancel">Cancel</string>
    <string name="dummy_doctor">Dr. Sarath Silva</string>
    <string name="dummy_day">#4</string>
    <string name="dummy_date">Monday, Dec 2018</string>
    <string name="dummy_week_short">Mon</string>
    <string name="dummy_specialty">Endocrinologist</string>
    <string name="dummy_time">6.00 AM - 6.00 PM</string>
    <string name="dummy_location">Hemas Hospital</string>
    <string name="dummy_price">LKR 0.00</string>
    <string name="dummy_in_min">20 mins</string>
    <string name="button_name">Button Name</string>
    <string name="video_call_title">Make a Video Call</string>
    <string name="channel_doctor_title">Channel a Doctor</string>
    <string name="btn_text_camera">Camera</string>
    <string name="btn_text_take_gallery">Gallery</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="payment">Payment</string>
    <string name="options">Options</string>
    <string name="payment_incomplete">Payment Incomplete</string>
    <string name="your_payment_is_was_not_successfull">Your payment is was not successfull</string>
    <string name="please_try_again">Please try again</string>
    <string name="retry">Retry</string>
    <string name="payment_successfull">Payment Successfull</string>
    <string name="done">Done</string>
</resources>