<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".payment.activity.PaymentFailActivity">

    <include
        android:id="@+id/lay_back_button"
        layout="@layout/component_top_back_botton_transperent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ley_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingStart="@dimen/default_horizontal_margin"
        android:paddingEnd="@dimen/default_horizontal_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_back_button">

        <TextView
            android:id="@+id/txt_talk_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:paddingTop="10dp"
            android:text="@string/payment"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_activity_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/options"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_paysuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pay_success_fail"
        android:contentDescription="@string/todo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ley_title" />

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:text="@string/payment_incomplete"
        android:textColor="@color/dark_text"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_paysuccess" />


    <TextView
        android:id="@+id/tv_fail_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/your_payment_is_was_not_successfull"
        android:textColor="@color/grey"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading" />

    <TextView
        android:id="@+id/tv_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:paddingTop="20dp"
        android:text="@string/please_try_again"
        android:textColor="@color/theme_color"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fail_msg" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/squre_coner_with_gradian_button_bg"
        android:fontFamily="@font/roboto_medium"
        android:padding="10dp"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>