<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".payment.activity.PaymentSuccessActivity">


    <LinearLayout
        android:id="@+id/ley_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="@dimen/default_horizontal_margin"
        android:paddingEnd="@dimen/default_horizontal_margin"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="12sp"
            android:id="@+id/txt_talk_to"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/black"
            android:text="@string/payment"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_black"
            android:id="@+id/txt_activity_heading"
            android:textColor="@color/black"
            android:text="@string/options"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_paysuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ley_title"
        android:background="@drawable/pay_successs"/>

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:text="@string/payment_successfull"
        android:textColor="@color/dark_text"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_paysuccess"/>


  <LinearLayout
      android:id="@+id/layout_details"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      app:layout_constraintTop_toBottomOf="@+id/tv_heading"
      android:orientation="vertical">


  </LinearLayout>


   <Button
       android:id="@+id/btn_done"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="20dp"
       android:fontFamily="@font/roboto_medium"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:background="@drawable/squre_coner_with_gradian_button_bg"
       android:textColor="@color/white"
       android:textSize="14sp"
       android:padding="10dp"
       android:text="@string/done"/>



</androidx.constraintlayout.widget.ConstraintLayout>