<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/container_co"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/take_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/btn_text_camera"
            android:textColor="@color/coloGray3" />

        <TextView
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/coloGray" />

        <TextView
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/btn_text_take_gallery"
            android:textColor="@color/coloGray3" />

        <TextView
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/coloGray" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/btn_text_cancel"
            android:textColor="@color/coloGray3" />
    </LinearLayout>

</LinearLayout>